--- a/MouthOfGod/index.html
+++ b/MouthOfGod/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPEhtml><head>
-<title> A Monster Encounter Generator</title>
+<title> Mouth of God Prototypes</title>
 </head>
 <body>
 <a href="territory_generator.html">Encounter Generator</a>
